# uuid-lib

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
python/uuid_lib/: __init__.py
src/: _uuid2.rs  _uuid3.rs  _uuid5.rs  _uuid6.rs  _uuid7.rs  lib.rs  uuid1.rs  uuid2.rs  uuid3.rs  uuid5.rs  uuid6.rs  uuid7.rs  uuid8.rs  uuid_struct.rs
tests/: test_uuid.py
uuid_lib/: __init__.py  __init__.pyi
