[build-system]
requires = ["maturin>=1.7,<2.0", "setuptools>=64.0.0"]
build-backend = "maturin"

[project]
name = "uuid_lib"
description = "Python bindings for the UUID library"
authors = [{ name = "intezya", email = "intezya@gmail.com"}]
keywords = ["uuid", "uuid_lib", "uuid1", "uuid2", "uuid3", "uuid4", "uuid5", "uuid6", "uuid7", "uuid8"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "uuid_lib._uuid_lib"
